--- a/Public/files.html
+++ b/Public/files.html
@@ -8,13 +8,13 @@
         document.documentElement.className = 'js';
     </script>
     <link rel="icon"
-          href="https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
+          href="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
           sizes="32x32"/>
     <link rel="icon"
-          href="https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
+          href="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
           sizes="192x192"/>
     <link rel="apple-touch-icon"
-          href="https://storage.froghub.io/froghub-home-html/assets/favicon.ico"/>
+          href="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/favicon.ico"/>
 
     <script id="diviarea-loader">window.DiviPopupData = window.DiviAreaConfig = {
         "zIndex": 1000000,
@@ -1009,7 +1009,7 @@
 
     @media only screen and (max-width: 480px) {
         #logo {
-            content: url('https://storage.froghub.io/froghub-home-html/assets/LOGO.png')
+            content: url('https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/LOGO.png')
         }
     }
 
@@ -1158,10 +1158,10 @@
     <div class="loader-inner">
         <div id="loader">
             <div class="imgloading-container"><span
-                    style="background-image: url(https://storage.froghub.io/froghub-home-html/assets/loading.png);"></span>
+                    style="background-image: url(https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/loading.png);"></span>
             </div>
             <img width="160" height="251" data-no-lazy="1" class="skip-lazy" alt="loader image"
-                 src="https://storage.froghub.io/froghub-home-html/assets/loading.png"></div>
+                 src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/loading.png"></div>
     </div>
     <div class="loader-section section-fade"></div>
     <div class="loader-close-button" style="display: none;"><span class="screen-reader-text">Close</span></div>
@@ -1173,7 +1173,7 @@
             <div class="logo_container">
                 <span class="logo_helper"></span>
                 <a href="https://www.froghub.io/">
-                    <img style="margin-top:0px;" src="https://storage.froghub.io/froghub-home-html/assets/LOGO.png" alt="Froghub" id="logo"
+                    <img style="margin-top:0px;" src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/LOGO.png" alt="Froghub" id="logo"
                          data-height-percentage="54"/>
                 </a>
             </div>
@@ -1251,7 +1251,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_0">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/web3.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/web3.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1278,14 +1278,14 @@
                                             </div> <!-- .et_pb_text -->
                                         </div> <!-- .et_pb_column -->
                                         <div class="et_pb_text_align_center et_pb_text_align_center-image">
-                                            <img src="assets/permanently.png">
+                                            <img src="https://storage.froghub.io/froghub-home-html/assets/permanently.png">
                                         </div>
                                     </div> <!-- .et_pb_row -->
                                 </div>
                                 <!--使信息的持久性可持续-->
 
                                 <!--稳定可靠的存储能力-->
-                                <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider" style="background-image: url(assets/files_banner.png) !important; padding-top: 80px;">
+                                <div class="et_pb_section et_pb_section_0 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider" style="background-image: url(https://storage.froghub.io/froghub-home-html/assets/files_banner.png) !important; padding-top: 80px;">
                                     <div class="et_pb_row et_pb_row_0 et_pb_gutters1">
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_text et_pb_text_0  et_pb_text_align_left et_pb_bg_layout_light">
@@ -1299,7 +1299,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_0">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/files_banner_right.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/files_banner_right.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1314,7 +1314,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_25  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image et_pb_image_28">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/protect.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/protect.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1346,7 +1346,7 @@
                                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_28  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_image et_pb_image_29">
                                                 <span class="et_pb_image_wrap "><img
-                                                        src="assets/s3.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/assets/s3.png"
                                                         alt="" title=""/></span>
                                             </div>
                                         </div> <!-- .et_pb_column -->
@@ -1355,7 +1355,7 @@
                                 <!--构建与S3兼容的数据存储-->
 
                                 <!--Froghub存储-->
-                                <div class="et_pb_section et_pb_section_0 et_section_regular" style="background-image: url(https://storage.froghub.io/froghub-home-html/assets/contactus.png) !important; padding: 40px !important; overflow: hidden">
+                                <div class="et_pb_section et_pb_section_0 et_section_regular" style="background-image: url(https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/contactus.png) !important; padding: 40px !important; overflow: hidden">
                                     <div class="et_pb_row et_pb_row_20">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_42  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_44  et_pb_text_align_center et_pb_bg_layout_dark">
@@ -1376,7 +1376,7 @@
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_46  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image">
                                                 <span class="et_pb_image_wrap et_pb_image_logo"><img
-                                                        src="https://storage.froghub.io/froghub-home-html/assets/logo2x.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/logo2x.png"
                                                         style="max-width: 150px;"
                                                         alt="" title=""/></span>
                                             </div>
@@ -1422,7 +1422,7 @@
                                                 <div class="et_pb_text_inner"><p
                                                         style="display: flex; align-items: center; word-break: break-all;">
                                                     <img width="18"
-                                                         src="https://storage.froghub.io/froghub-home-html/assets/email.png">&nbsp;<span>froghub@163.com</span></p>
+                                                         src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/email.png">&nbsp;<span>froghub@163.com</span></p>
                                                 </div>
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_70 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
@@ -1434,7 +1434,7 @@
                                                             href='tencent://message/?uin=597800451&Site=Sambow&Menu=yes'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/qq.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/qq.png">
                                                         <div class="icon-tip">
                                                             QQ: 597800451
                                                         </div>
@@ -1446,10 +1446,10 @@
                                                             href='javascript:;'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/wechat.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/wechat.png">
                                                         <div class="icon-tip-wx">
                                                             <img style="width: 85%;height: 85%;display: inline-block;transform: translateY(10px)"
-                                                                 src="https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
+                                                                 src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
                                                         </div>
                                                     </a>
                                                 </li>
@@ -1460,7 +1460,7 @@
                                                             class='icon et_pb_with_border'
                                                             target="_blank"
                                                     >
-                                                        <img src="assets/github_icon.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/github_icon.png">
                                                     </a>
                                                 </li>
                                             </ul> <!-- .et_pb_counters -->
@@ -1731,7 +1731,7 @@
 }
 
 div.et_pb_section.et_pb_section_0 {
-    background-image: url(https://storage.froghub.io/froghub-home-html/assets/banner.png) !important
+    background-image: url(https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/banner.png) !important
 }
 
 .et_pb_section_0.et_pb_section {
@@ -1743,7 +1743,7 @@ div.et_pb_section.et_pb_section_0 {
 }
 
 .et_pb_section_0.section_has_divider.et_pb_bottom_divider .et_pb_bottom_inside_divider {
-    background-image: url(assets/divider.png);
+    background-image: url(https://storage.froghub.io/froghub-home-html/assets/divider.png);
     background-size: 100% 65px;
     bottom: 0;
     height: 65px;
@@ -3955,7 +3955,7 @@ ul.et_pb_social_media_follow_0 a.icon {
     }
 
     .et_pb_section_0.section_has_divider.et_pb_bottom_divider .et_pb_bottom_inside_divider {
-        background-image: url(assets/divider.png);
+        background-image: url(https://storage.froghub.io/froghub-home-html/assets/divider.png);
         background-size: 100% 40px;
         bottom: 0;
         height: 40px;
@@ -4668,7 +4668,7 @@ ul.et_pb_social_media_follow_0 a.icon {
     }
 
     .et_pb_section_0.section_has_divider.et_pb_bottom_divider .et_pb_bottom_inside_divider {
-        background-image: url(assets/divider.png);
+        background-image: url(https://storage.froghub.io/froghub-home-html/assets/divider.png);
         background-size: 100% 30px;
         bottom: 0;
         height: 30px;
