--- a/Public/apply.html
+++ b/Public/apply.html
@@ -8,13 +8,13 @@
         document.documentElement.className = 'js';
     </script>
     <link rel="icon"
-          href="https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
+          href="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
           sizes="32x32"/>
     <link rel="icon"
-          href="https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
+          href="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/favicon.ico"
           sizes="192x192"/>
     <link rel="apple-touch-icon"
-          href="https://storage.froghub.io/froghub-home-html/assets/favicon.ico"/>
+          href="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/favicon.ico"/>
 
     <script id="diviarea-loader">window.DiviPopupData = window.DiviAreaConfig = {
         "zIndex": 1000000,
@@ -996,7 +996,7 @@
 
     @media only screen and (max-width: 480px) {
         #logo {
-            content: url('https://storage.froghub.io/froghub-home-html/assets/LOGO.png')
+            content: url('https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/LOGO.png')
         }
     }
 
@@ -1145,10 +1145,10 @@
     <div class="loader-inner">
         <div id="loader">
             <div class="imgloading-container"><span
-                    style="background-image: url(https://storage.froghub.io/froghub-home-html/assets/loading.png);"></span>
+                    style="background-image: url(https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/loading.png);"></span>
             </div>
             <img width="160" height="251" data-no-lazy="1" class="skip-lazy" alt="loader image"
-                 src="https://storage.froghub.io/froghub-home-html/assets/loading.png"></div>
+                 src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/loading.png"></div>
     </div>
     <div class="loader-section section-fade"></div>
     <div class="loader-close-button" style="display: none;"><span class="screen-reader-text">Close</span></div>
@@ -1160,7 +1160,7 @@
             <div class="logo_container">
                 <span class="logo_helper"></span>
                 <a href="https://www.froghub.io/">
-                    <img style="margin-top:0px;" src="https://storage.froghub.io/froghub-home-html/assets/LOGO.png" alt="Froghub" id="logo"
+                    <img style="margin-top:0px;" src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/LOGO.png" alt="Froghub" id="logo"
                          data-height-percentage="54"/>
                 </a>
             </div>
@@ -1275,7 +1275,7 @@
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_46  et_pb_css_mix_blend_mode_passthrough">
                                             <div class="et_pb_module et_pb_image">
                                                 <span class="et_pb_image_wrap et_pb_image_logo"><img
-                                                        src="https://storage.froghub.io/froghub-home-html/assets/logo2x.png"
+                                                        src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/logo2x.png"
                                                         style="max-width: 150px;"
                                                         alt="" title=""/></span>
                                             </div>
@@ -1321,7 +1321,7 @@
                                                 <div class="et_pb_text_inner"><p
                                                         style="display: flex; align-items: center; word-break: break-all;">
                                                     <img width="18"
-                                                         src="https://storage.froghub.io/froghub-home-html/assets/email.png">&nbsp;<span>froghub@163.com</span></p>
+                                                         src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/email.png">&nbsp;<span>froghub@163.com</span></p>
                                                 </div>
                                             </div> <!-- .et_pb_text -->
                                             <div class="et_pb_module et_pb_text et_pb_text_70 et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
@@ -1333,7 +1333,7 @@
                                                             href='tencent://message/?uin=597800451&Site=Sambow&Menu=yes'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/qq.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/qq.png">
                                                         <div class="icon-tip">
                                                             QQ: 597800451
                                                         </div>
@@ -1345,10 +1345,10 @@
                                                             href='javascript:;'
                                                             class='icon et_pb_with_border icon-phone'
                                                     >
-                                                        <img src="assets/wechat.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/wechat.png">
                                                         <div class="icon-tip-wx">
                                                             <img style="width: 85%;height: 85%;display: inline-block;transform: translateY(10px)"
-                                                                 src="https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
+                                                                 src="https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/wx.png" width=52 height=52 alt="">
                                                         </div>
                                                     </a>
                                                 </li>
@@ -1359,7 +1359,7 @@
                                                             class='icon et_pb_with_border'
                                                             target="_blank"
                                                     >
-                                                        <img src="assets/github_icon.png">
+                                                        <img src="https://storage.froghub.io/froghub-home-html/assets/github_icon.png">
                                                     </a>
                                                 </li>
                                             </ul> <!-- .et_pb_counters -->
@@ -1705,7 +1705,7 @@
 }
 
 div.et_pb_section.et_pb_section_0 {
-    background-image: url(https://storage.froghub.io/froghub-home-html/assets/banner.png) !important
+    background-image: url(https://storage.froghub.io/froghub-home-html/https://storage.froghub.io/froghub-home-html/assets/banner.png) !important
 }
 
 .et_pb_section_0.et_pb_section {
